--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:23306/weather?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=weather
 spring.datasource.password=weather1234
+spring.datasource.hikari.maximum-pool-size=20
 
 # jpa
 spring.jpa.show-sql=true
