--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.database=mysql
 openweather.key=84188f87f8f4b280487be2d489320af2
 
 # logback
-#logging.config=classpath:logback-spring.xml
+logging.config=classpath:logback-spring.xml
 
 #swagger
-#spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
